iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_split_wrong_delimiter_type.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Type error: expected string, found number @ example-templates/errors/split-wrong-delimiter-type.yaml:2:20 (errno: ERR_5001)
  -> data type mismatch

   1 | # !$split with delimiter that's not a string
   2 | test_split: !$split [123, "hello,world"]
     |                    ^^^^^^^^ expected string

   expected string, found number

   For more info: iidy explain ERR_5001
